--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@babel/eslint-parser": "^7.16.5",
+    "@react-native-community/eslint-config": "^3.0.1",
+    "eslint": "^8.7.0",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "prettier": "^2.5.1"
   },
   "private": true
 }
