--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,6 @@
     "extends": "@react-native-community",
     "parser": "@babel/eslint-parser",
     "rules": {
-      "quotes": [2, "double", { "avoidEscape": true }],
-      "semi": ["error", "never"]
+      "quotes": [2, "double", { "avoidEscape": true }]
     }
-  }
+}
