--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "lint": "eslint . --ext .js --ignore-path .gitignore"
   },
   "dependencies": {
     "expo": "~44.0.0",
@@ -23,6 +24,8 @@
     "@react-native-community/eslint-config": "^3.0.1",
     "eslint": "^8.7.0",
     "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
     "prettier": "^2.5.1"
   },
   "private": true
