--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
     "firebase": "^9.6.6",
+    "firebase-functions": "^3.18.1",
+    "firebase-tools": "^10.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
