--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.1.1",
+    "@stripe/stripe-react-native": "0.2.3",
     "camelize": "^1.0.0",
     "expo": "~44.0.0",
     "expo-camera": "~12.1.2",
