--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "firebase": "^9.6.6",
     "firebase-functions": "^3.18.1",
     "firebase-tools": "^10.2.1",
+    "lottie-react-native": "5.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
